hphp/hack/test/typecheck/array/safe_vector_array/disallow_varray_or_darray_where_dict_like_array_is_required.php.exp
File "disallow_varray_or_darray_where_dict_like_array_is_required.php", line 10, characters 31-58:
Invalid argument (Typing[4110])
File "disallow_varray_or_darray_where_dict_like_array_is_required.php", line 3, characters 38-57:
Expected darray<arraykey, int>
File "disallow_varray_or_darray_where_dict_like_array_is_required.php", line 5, characters 40-60:
But got varray_or_darray<arraykey, int>
